<resources>
    <string name="app_name">YnovSocial</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="title_home">Accueil</string>
    <string name="title_calendar">Calendrier</string>
    <string name="envoyer">Envoyer</string>
    <string name="anonyme">Anonyme</string>
    <string name="message">Message</string>
    <string name="sondage">Sondage</string>
    <string name="event">Evenement</string>
    <string name="createTitle">Création d\'un message</string>
    <string name="messageText">Inserer votre texte ici</string>
    <string name="calendarTitle">CALENDRIER</string>
</resources>