<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/createTitle"
        android:textSize="50sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/radiobtn1">

        <RadioButton
            android:id="@+id/radiobtn1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/message"/>

        <RadioButton
            android:id="@+id/radiobtn2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/sondage"/>

        <RadioButton
            android:id="@+id/radiobtn3"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/event" />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:autofillHints="username"
        android:text="@string/messageText"
        android:layout_margin="30dp"
        android:inputType="textAutoCorrect"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        >

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/anonyme"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/envoyer"/>
    </LinearLayout>

</LinearLayout>